# Scout

./: .gitignore  pyproject.toml  setup.py
scout/: __main__.py  config.py  plotter.py
scout/gui/: main.py  plotter.py  widgets.py
tests/: test_scout.py
