[tool.poetry]
name = "scout"
version = "0.1.0"
description = ""
authors = ["Eivind Fonn <evfonn@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
scout = "scout.__main__:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pyvista = "^0.36.1"
pyvistaqt = "^0.9.0"
PySide6 = "^6.3.2"
loguru = "^0.6.0"
splipy = { git = "https://github.com/TheBB/Splipy.git", branch = "scout" }
xdg = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
